--- a/css/style.css
+++ b/css/style.css
@@ -356,7 +356,7 @@ body {
 
 
 .button {
-    outline: none;    
+    outline: none;
     border: none;
     height: 48px;
     border-radius: 24px;
@@ -466,7 +466,7 @@ button.button_end {
     justify-content: center;
 }
 
-.layout__footer > * {
+.layout__footer>* {
     flex-grow: 1;
     height: 100%;
 }
@@ -476,4 +476,147 @@ button.button_end {
     flex-direction: row;
     align-items: center;
     justify-content: center;
+}
+
+
+.mcalendar {
+    max-width: 238px;
+    width: 100%;
+}
+
+.mcalendar-header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 12px 4px 12px;
+    border-bottom: 1px solid #BEBEBE;
+}
+
+.mcalendar-header > * {
+    cursor: pointer;
+}
+
+.mcalendar-date, .mcalendar-day {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    height: 34px;
+}
+
+.mcalendar-day {
+    font-size: 10px;
+    font-weight: 500;
+    color: #000;
+}
+
+.mcalendar-date {
+    font-size: 12px;
+    font-weight: 400;
+    cursor: pointer;
+}
+
+.mcalendar-date_ntm {
+    opacity: .5;
+}
+
+.mcalendar-day_active {
+    width: 28px;
+    height: 28px;
+    margin: 3px;
+    background: #FFB525;
+    color: #fff;
+    border-radius: 10px;
+}
+
+.mcalendar-date_plans:not(.mcalendar-day_active) {
+    background: #FFDFA0;
+}
+
+.mcalendar-date_done:not(.mcalendar-day_active) {
+    background: #E66263;
+    color: #fff;
+}
+
+.act {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    font-weight: 400;
+    font-size: 14px;
+    color: #4A4A4A;
+    width: 100%;
+    padding: 12px 0;
+    min-width: 238px;
+}
+
+.act__title span {
+    margin-right: 8px;
+    font-weight: 600;
+}
+
+.vc-content {
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    display: flex;
+}
+
+.mcalendar-grid-element {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    height: 60px;
+    cursor: pointer;
+}
+
+.mcalendar-grid-element.active {
+    background: #E66263;
+    color: #fff;
+
+}
+
+.add-activities {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.add-activities > div {
+    height: 28px;
+    color: #fff;
+    text-transform: uppercase;
+    padding: 0 8px;
+    margin: 8px;
+    border-radius: 14px;
+    background: #A6A6A6;
+    font-size: 10px;
+    display: inline-flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    font-weight: 400;
+    cursor: pointer;
+
+}
+
+.date-activities {
+    padding: 12px 0;
+}
+
+.mcalendar-arr-l, .mcalendar-arr-r {
+    background-size: cover;
+    background-color: #E66263;
+    border: 3px solid #E66263;
+}
+
+.mcalendar-arr-l {
+    background-image: url('../img/arr_l.png');
+}
+.mcalendar-arr-r {
+    background-image: url('../img/arr_r.png');
 }
